--- a/Lug_Parcial2_Pocztaruk/Lug_Parcial2_Pocztaruk.csproj
+++ b/Lug_Parcial2_Pocztaruk/Lug_Parcial2_Pocztaruk.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -77,6 +80,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BE\BE.csproj">
+      <Project>{efc0abf7-ff68-406d-8b7d-dc974ba139b0}</Project>
+      <Name>BE</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BLL\BLL.csproj">
       <Project>{dcc4d1fd-c920-45ea-b493-a428de4e9d51}</Project>
       <Name>BLL</Name>
