--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7873168F-9A29-4A2A-8C1A-F37A2901B9FE}</ProjectGuid>
+    <ProjectGuid>{EFC0ABF7-FF68-406D-8B7D-DC974BA139B0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DAL</RootNamespace>
-    <AssemblyName>DAL</AssemblyName>
+    <RootNamespace>BE</RootNamespace>
+    <AssemblyName>BE</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,21 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Acceso.cs" />
-    <Compile Include="MAPPER.cs" />
-    <Compile Include="MP_CONCEPTO.cs" />
-    <Compile Include="MP_EMPLEADO.cs" />
-    <Compile Include="MP_RECIBO.cs" />
+    <Compile Include="CONCEPTO.cs" />
+    <Compile Include="EMPLEADO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BE\BE.csproj">
-      <Project>{efc0abf7-ff68-406d-8b7d-dc974ba139b0}</Project>
-      <Name>BE</Name>
-    </ProjectReference>
+    <Compile Include="RECIBO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
